--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!-- header starting -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -26,9 +27,23 @@
             <img src="images/banner.png" >
         </div>
     </header>
+    <!-- header end -->
 
-    <main>
-
+    <main >
+        <!-- team section -->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png">
+                <img src="images/team2.png">
+                <img src="images/team3.png">
+                <img src="images/team4.png">
+            </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="sp-1">Quick list</span> <span class="sp-2">of Our</span> <span class="sp-3">Features</span></h3>
+                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
 
     <footer>
