--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header starting -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -21,7 +21,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects </h1>
-            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
             </div>
             <img src="images/banner.png" >
@@ -40,8 +40,50 @@
             </div>
             <div class="teams-content">
                 <h3 class="teams-title"><span class="sp-1">Quick list</span> <span class="sp-2">of Our</span> <span class="sp-3">Features</span></h3>
-                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features section -->
+        <section>
+
+        </section>
+        <!-- facts section -->
+         <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png">
+                    <h2 class="card-stats">52</h2>
+                    <p class="card-title">Awards Winning</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title">Projects Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title">Email Send</p>
+                </div>
+            </div>
+         </section>
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <div class="sponsors-icon">
+                <img src="images/sponsors/spotify.png">
+                <img src="images/sponsors/amazon.png">
+                <img src="images/sponsors/google.png">
+                <img src="images/sponsors/telerama.png">
+                <img src="images/sponsors/figma.png">
             </div>
         </section>
     </main>
